  menus by both using raw sql queries and changing the query and dom element
  modification orders in javascript.
* **New:** Added ``fix_task_statuses`` view to fix a particular task and its
  parent statuses according to the task/status pipeline.
* **New:** GanttChart columns can now be toggled without any problem in tree
  expansion.

0.1.1
=====

* **Update:** Moved to Ace, a Bootstrap derived template.
* **New:** Added Resource Chart.
* **New:** Added the ability to zoom in Gantt Chart.
* **Fix:** Fixed avatar uploads in user info update page.
* **Update:** Added status and status list creation for Project, Task, Asset,
  Shot and Sequence entity types and New, Work In Progress, Pending Review,
  Has Revision and Completed to
  ``stalker_pyramid.scripts.initializedb.main()``.
* **Update:** Status colors are now coming from SimpleEntity.html_class
  attribute.

0.1.0.b4
========

* **Update:** Updating both the code and the style to Twitter Bootstrap.
* **Update:** Main Navigation Bar is updated both the code and the style to
  Twitter Bootstrap.
* **Update:** TaskJuggler error messages are now correctly displayed in the UI.
* **Update:** Updated the GanttChart theme to match the rest of the site.
* **Fix:** Task dialog is now able to create Tasks, Assets, Shots and
  Sequences.
* **Fix:** Task dialog is now working properly and it is now possible to add a
  type for the Tasks to distinguish different type of tasks like Modeling,
  Animation, Look Development, Lighting, Comp etc.
* **Fix:** It is now possible to create a child or dependent task from the
  "Create" menu in **List Tasks** view.
* **Update:** The ``chosen_field_creator()`` function now sets the field to
  ``is_updating=true`` mode before filling the data in, and back to
  ``is_updating=false`` mode after the data arrived and items are created. Also
  this is used extensively in the Task Dialog.

0.1.0.b3
========

* **Update:** Redesigned all the routes to comply with a RESTful service
  scheme.