@@ -237,7 +237,7 @@
             <a href={{=it.link}}>
                 <i class={{=it.icon}}></i>
                 <span class="menu-text">{{=it.title}}</span>
-                <span class="badge badge-info">{{=it.count}}</span>
+                <span class="badge {{ if (it.count > 0) { }}badge-important{{ } else { }}badge-success{{ } }}">{{=it.count}}</span>
             </a>
         </li>
     </script>
